--- a/Java/week3/day13/springherokuexample/pom.xml
+++ b/Java/week3/day13/springherokuexample/pom.xml
@@ -46,6 +46,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>2.0.6</version>
+
+				<configuration>
+					<appName>springherokuexample</appName>
+					<processTypes>
+						<web>java $JAVA_OPTS -cp target/classes:target/dependency/* SpringherokuexampleApplication</web>
+					</processTypes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
